--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <strong>24</strong><br>Series
   </div>
 
-  <div class="carousel-wrapper">
+  <div class="carousel-wrapper" id="subjects">
     <h4>Curriculums & Subjects:</h4>
     <div class="carousel" id="logo-carousel">
       <img src="cambridge.png" alt="Cambridge Assessment" />
@@ -105,9 +105,9 @@
       <h4>Starter</h4>
       <p class="price">50 MYR </p>
       <ul>
-        <li>Group learning</li>
-        <li>Access to basic content</li>
-        <li>Weekly quizzes</li>
+        <li>Small group learning (Up to 4)</li>
+        <li>Live online sessions</li>
+        <li>Weekly practice and guided support</li>
       </ul>
       <a href="#book" class="btn-outline">Start Learning</a>
     </div>
@@ -115,9 +115,9 @@
       <h4>Pro</h4>
       <p class="price">70 MYR</p>
       <ul>
-        <li>1-on-1 tutoring</li>
-        <li>Custom curriculum</li>
-        <li>Certificate of completion</li>
+       <li>1-on-1 personalized online tutoring</li>
+        <li>Customized help with assignments and curriculum</li>
+        <li>Flexible learning pace and focus</li>
       </ul>
       <a href="#book" class="btn-black">Start Learning</a>
     </div>
@@ -125,9 +125,9 @@
       <h4>Face-to-face</h4>
       <p class="price">Contact</p>
       <ul>
-        <li>Private group classes</li>
-        <li>Progress tracking</li>
-        <li>Admin dashboard</li>
+       <li>In-person tutoring (based on location availability)</li>
+        <li>Direct tutor-student engagement</li>
+        <li>Progress monitoring and parental communication</li>
       </ul>
       <a href="#book" class="btn-outline">Start Learning</a>
     </div>
@@ -137,7 +137,7 @@
   <section class="booking" id="book">
     <h2>Book a Free Trial Session</h2>
     <input type="date" id="booking-date">
-    <button onclick="bookSession()"><a href="contact.html">Book Now</a></button>
+   <button><a href="https://calendly.com/daoulhadjabdelilah/free-trial-lesson">Book Now</a></button>
     <p id="confirmation"></p>
   </section>
 
